Add real mailing list addresses
* Update `.env.example` with confirmed sending domains and info
* Add mailing list name/address constants
* Configure newsletters to associate with a mailing list instead of
  providing a brittle newsletter address
* Programmatically generate the mailing list email address using the
  configured domain and the mailing list constants
* Add a test for composing mailing list emails

Affects #23

--- a/src/server/newsletters/templates/helloWorld.hbs
+++ b/src/server/newsletters/templates/helloWorld.hbs
@@ -1,4 +1,4 @@
-Hello world! Here are up to five claims:
+This is the Hello World newsletter that plucks the five latest claims and sends them to the dev list.
 
 {{#each claims}}
 {{ content }}
