--- a/src/server/newsletters/templates/default.hbs
+++ b/src/server/newsletters/templates/default.hbs
@@ -1,1 +1,1 @@
-This is the default email template. You probably need to point the newsletter to someting else.
+This is the default email template. You probably need to point the newsletter to something else.
