Flesh out claim query and rendering
* Limit the primary newsletter to the 10 highest-ranking claims
* Re-add the Speaker association to simulate reality (even though we aren’t actually storing Speaker data and will change how we do so in #88)

Once #88 is merged in, this will need to be modified to remove the speaker association query, update the templates with the new references (`speaker.name` → `speakerName`, `sourceUrl` → `canonicalUrl`), and add `source`.

Affects #92

--- a/src/server/newsletters/templates/primary.hbs
+++ b/src/server/newsletters/templates/primary.hbs
@@ -1,21 +1,22 @@
-{{> head }}
-{{> boilerplateTop }}
+{{> head}}
+{{> boilerplateTop}}
 
 <div class="claim-section">
   <h1 class="claim-section__header">📺 TV Claims 📺</h1>
   <ul class="claims">
-  {{#each claims}}
+  {{#each tvClaims}}
     <li class="claim">
       <div class="claim__metadata">
-        <a href="#" class="claim__permalink">
-          <cite class="claim__speaker">Speaker Name</cite>
-          <span class="claim__platform">(<b>Platform</b>)</span></a>:
+        <a href="{{sourceUrl}}" class="claim__permalink">
+          <cite class="claim__speaker">
+            {{speaker.name}}
+          </cite></a>:
       </div>
-      <blockquote class="claim__content">{{ content }}</blockquote>
+      <blockquote class="claim__content">{{content}}</blockquote>
     </li>
   {{/each}}
   </ul>
 </div>
 
-{{> boilerplateBottom }}
-{{> foot }}
+{{> boilerplateBottom}}
+{{> foot}}
