--- a/src/server/newsletters/templates/primaryText.hbs
+++ b/src/server/newsletters/templates/primaryText.hbs
@@ -3,11 +3,11 @@
 ------
 
 📺 TV CLAIMS 📺
-{{#each claims}}
+{{#each tvClaims}}
 
-Speaker Name (Platform):
+{{speaker.name}}:
 {{ content }}
-— URL
+— {{sourceUrl}}
 {{/each}}
 
 ------
