Remove reference to Speaker model
Now that we have merged #88 we need to update here to no longer
reference the old, now gone Speaker model.

The speaker name / affiliation are now directly part of the claim model.
Though it's worth noting as of right now it still is not being populated
upon claim creation

--- a/src/server/newsletters/templates/national.hbs
+++ b/src/server/newsletters/templates/national.hbs
@@ -7,9 +7,9 @@
   {{#each tvClaims}}
     <li class="claim">
       <div class="claim__metadata">
-        <a href="{{sourceUrl}}" class="claim__permalink">
+        <a href="{{canonicalUrl}}" class="claim__permalink">
           <cite class="claim__speaker">
-            {{speaker.name}}
+            {{speakerName}}
           </cite></a>:
       </div>
       <blockquote class="claim__content">{{content}}</blockquote>
