--- a/src/server/newsletters/templates/nationalText.hbs
+++ b/src/server/newsletters/templates/nationalText.hbs
@@ -5,9 +5,9 @@
 📺 TV CLAIMS 📺
 {{#each tvClaims}}
 
-{{speaker.name}}:
+{{speakerName}}:
 {{ content }}
-— {{sourceUrl}}
+— {{canonicalUrl}}
 {{/each}}
 
 ------
