--- a/src/server/newsletters/templates/national.hbs
+++ b/src/server/newsletters/templates/national.hbs
@@ -5,13 +5,13 @@
   <h1 class="claim-section__header">📺 TV Claims 📺</h1>
   <ul class="claims">
   {{#each tvClaims}}
-    <li class="claim" data-platform="{{convertScraperCodeToPlatformName scraperCode}}">
+    <li class="claim" data-platform="{{convertScraperNameToPlatformName scraperName}}">
       <div class="claim__metadata">
         <a href="{{canonicalUrl}}" class="claim__permalink">
           <cite class="claim__speaker">
             {{speakerName}}
           </cite>
-          <span class="claim__platform">({{convertScraperCodeToPlatformName scraperCode}})</span></a>:
+          <span class="claim__platform">({{convertScraperNameToPlatformName scraperName}})</span></a>:
       </div>
       <blockquote class="claim__content">{{content}}</blockquote>
     </li>
