Reset blockquote styling for Fastmail
Fixes #96

--- a/src/server/newsletters/templates/partials/head.hbs
+++ b/src/server/newsletters/templates/partials/head.hbs
@@ -118,6 +118,15 @@
         box-shadow: none;
       }
     }
+    {{!-- BEGIN CLIENT-SPECIFIC HACKS --}}
+      {{!-- BEGIN FASTMAIL WEB CLIENT --}}
+      blockquote {
+        border-radius: 0;
+        background-color: transparent;
+        color: inherit;
+      }
+      {{!-- END FASTMAIL WEB CLIENT --}}
+    {{!-- END CLIENT-SPECIFIC HACKS --}}
   </style>
 </head>
 <body>
