Update newsletter boilerplate and ClaimBuster link
Affects #91
Affects #111

--- a/src/server/newsletters/templates/partials/boilerplateTop.hbs
+++ b/src/server/newsletters/templates/partials/boilerplateTop.hbs
@@ -1,1 +1,1 @@
-<p class="intro"><b>Good morning, fact-checkers!</b> This edition of our Tech &amp; Check Alerts features claims that the Duke Reporters’ Lab automatically scooped up and then prioritized using the ClaimBuster algorithm developed by our computer science partners at the University of Texas, Arlington.</p>
+<p class="intro">Good morning, fact-checkers! This Tech &amp; Check Alert features potential claims from CNN and Twitter that were identified automatically using the ClaimBuster algorithm.</p>
