--- a/src/server/newsletters/templates/partials/head.hbs
+++ b/src/server/newsletters/templates/partials/head.hbs
@@ -104,6 +104,9 @@
     .claim[data-platform="Facebook"] .claim__content {
       border-color: #3b5998;
     }
+    h1,h2,h3 {
+      text-transform: uppercase;
+    }
     b {
       font-weight: 600;
     }
