--- a/src/server/newsletters/templates/partials/boilerplateBottom.hbs
+++ b/src/server/newsletters/templates/partials/boilerplateBottom.hbs
@@ -1,11 +1,12 @@
-<h3>About this email</h3>
+<h3>About This Alert</h3>
 
-<p>Twitter statements are taken from selected Twitter feeds, such as national and state party organizations and endangered incumbents, including those lawmakers’ official campaign and congressional pages. These feeds often quote other sources and are sometimes written in the voice of staffers, so <mark>check the original post to verify attribution</mark>. CNN statements are taken from rush transcripts of yesterday’s CNN programs. Because the transcripts are done quickly, be sure to verify the accuracy of any quote or attribution against the video before using these statements in a fact-check.</p>
+<p>This daily email is part of an experimental, automated alert service developed by the Duke Reporters’ Lab as part of our Tech &amp; Check Cooperative. The alerts are computer-generated tip sheets designed to help journalists identify statements that are newsworthy enough to fact-check. The alerts are not intended for broader public distribution. No humans on the Tech &amp; Check team reviewed or verified the accuracy of these statements or their attribution before this alert was sent.</p>
 
-<p>This automated email is part of an experimental alert service developed by the Tech &amp; Check Cooperative at the Duke Reporters’ Lab. It is strictly intended to help fact-checkers spot potentially newsworthy statements and claims. It is not for public distribution. No humans on the Tech &amp; Check team reviewed or verified these statements or their attribution before this alert was sent. ClaimBuster selected and ranked each statement algorithmically based on its potential checkability, not its factual accuracy. You can learn more about how ClaimBuster works here: <a href="http://idir-server2.uta.edu/claimbuster/">http://idir-server2.uta.edu/claimbuster/</a></p>
+<p>The statements above from CNN are based on the network's "rush" transcripts. Please verify quotes and speakers by checking the original video. Statements from Twitter were gathered from a selected list of official Twitter accounts, including the feeds of candidates, elected officials and state and national party organizations.</p>
+
+<p>The alerts are generated using the ClaimBuster algorithm developed by computer scientists at the University of Texas, Arlington. ClaimBuster ranks each statement based on its potential "checkability" -- NOT its accuracy. You can learn more about how that works on the ClaimBuster site (<a href="https://idir.uta.edu/claimbuster/">https://idir.uta.edu/claimbuster/</a>).</p>
 
 <p>Please send any feedback to Tech &amp; Check project manager Erica Ryan (<a href="mailto:elryan@gmail.com">elryan@gmail.com</a>).</p>
 
-<p>Best,</p>
-
-<p><b>Duke Reporters’ Lab</b></p>
+<p>Best,<br>
+<b>Duke Reporters' Lab</b></p>
