--- a/src/server/newsletters/templates/national.hbs
+++ b/src/server/newsletters/templates/national.hbs
@@ -11,6 +11,7 @@
           <cite class="claim__speaker">
             {{speakerName}}
           </cite>
+          {{humanizeSource source scraperName}}
           <span class="claim__platform">({{convertScraperNameToPlatformName scraperName}})</span></a>:
       </div>
       <blockquote class="claim__content">{{content}}</blockquote>
