--- a/src/server/newsletters/templates/nationalText.hbs
+++ b/src/server/newsletters/templates/nationalText.hbs
@@ -5,7 +5,7 @@
 📺 TV CLAIMS 📺
 {{#each tvClaims}}
 
-{{speakerName}} ({{convertScraperNameToPlatformName scraperName}}):
+{{speakerName}} {{humanizeSource source scraperName}} ({{convertScraperNameToPlatformName scraperName}}):
 {{ content }}
 — {{canonicalUrl}}
 {{/each}}
