Add Twitter claims to National newsletter
Following on the addition of the `TWITTER_ACCOUNT` scraper, this adds
scraped tweets to the National newsletter. There was an unexpected
amount of related tinkering to make this work well.

* Change the expected structure of the body data so that a single
  `claims` object is returned, keyed by medium (currently `TV` and
  `SOCIAL`).
* Move the generation of the date scope out of the query paramater
  itself and to an instance attribute set at creation time, so that
  repeated queries for this instance will share the same scope.
* Add social claims to the newsletter templates.
* Since it's now possible — though weird — for one medium to have claims
  while the other doesn't, this adds fallback language to each medium's
  section in the template. (If both media have no claims, the preflight
  assertion fails and we don't send the newsletter at all.)
* Clean up some of the constants to improve the clarity and purpose of
  each.

Affects #95

--- a/src/server/newsletters/templates/national.hbs
+++ b/src/server/newsletters/templates/national.hbs
@@ -3,21 +3,47 @@
 
 <div class="claim-section">
   <h1 class="claim-section__header">📺 TV Claims 📺</h1>
-  <ul class="claims">
-  {{#each tvClaims}}
-    <li class="claim" data-platform="{{convertScraperNameToPlatformName scraperName}}">
-      <div class="claim__metadata">
-        <a href="{{canonicalUrl}}" class="claim__permalink">
-          <cite class="claim__speaker">
-            {{speakerName}}
-          </cite>
-          {{#if source}}<span class="claim__source">on {{ source }}</span>{{/if}}
-          <span class="claim__platform">({{convertScraperNameToPlatformName scraperName}})</span></a>:
-      </div>
-      <blockquote class="claim__content">{{content}}</blockquote>
-    </li>
-  {{/each}}
-  </ul>
+  {{#if claims.TV.length}}
+    <ul class="claims">
+    {{#each claims.TV}}
+      <li class="claim" data-platform="{{convertScraperNameToPlatformName scraperName}}">
+        <div class="claim__metadata">
+          <a href="{{canonicalUrl}}" class="claim__permalink">
+            <cite class="claim__speaker">
+              {{speakerName}}
+            </cite>
+            {{#if source}}<span class="claim__source">on {{ source }}</span>{{/if}}
+            <span class="claim__platform">({{convertScraperNameToPlatformName scraperName}})</span></a>:
+        </div>
+        <blockquote class="claim__content">{{content}}</blockquote>
+      </li>
+    {{/each}}
+    </ul>
+  {{else}}
+    <p class="no-claims">Looks like we didn't see any TV claims over the past day. 🤔🤔🤔</p>
+  {{/if}}
+</div>
+
+<div class="claim-section">
+  <h1 class="claim-section__header">🎭 Social Media Claims 🎭</h1>
+  {{#if claims.SOCIAL.length}}
+    <ul class="claims">
+    {{#each claims.SOCIAL}}
+      <li class="claim" data-platform="{{convertScraperNameToPlatformName scraperName}}">
+        <div class="claim__metadata">
+          <a href="{{canonicalUrl}}" class="claim__permalink">
+            <cite class="claim__speaker">
+              {{speakerName}}
+            </cite>
+            <span class="claim__platform">({{convertScraperNameToPlatformName scraperName}})</span></a>:
+        </div>
+        <blockquote class="claim__content">{{content}}</blockquote>
+      </li>
+    {{/each}}
+    </ul>
+  {{else}}
+    <p class="no-claims">Looks like we didn't see any social media claims over the past day. 🤔🤔🤔</p>
+  {{/if}}
 </div>
 
 {{> boilerplateBottom}}
