--- a/src/server/newsletters/templates/partials/head.hbs
+++ b/src/server/newsletters/templates/partials/head.hbs
@@ -24,6 +24,10 @@
       font-size: 0.9em;
       color: #666;
     }
+    .no-claims {
+      text-align: center;
+      color: #666;
+    }
     .claim-section {
       margin: 3em 0;
     }
