--- a/src/server/newsletters/templates/nationalText.hbs
+++ b/src/server/newsletters/templates/nationalText.hbs
@@ -1,4 +1,4 @@
-{{> boilerplateTop }}
+{{> nationalBoilerplateTop }}
 
 ------
 
@@ -26,4 +26,4 @@ Looks like we didn't see any social media claims over the past day. 🤔🤔🤔
 
 ------
 
-{{> boilerplateBottom }}
+{{> nationalBoilerplateBottom }}
