--- a/src/server/newsletters/templates/partials/nationalBoilerplateBottom.hbs
+++ b/src/server/newsletters/templates/partials/nationalBoilerplateBottom.hbs
@@ -1,6 +1,6 @@
 <h3>About This Alert</h3>
 
-<p>This daily email is part of an experimental, automated alert service developed by the Duke Reporters’ Lab as part of our Tech &amp; Check Cooperative. The alerts are computer-generated tip sheets designed to help journalists identify statements from the last 24 hours that are newsworthy enough to fact-check. The alerts are not intended for broader public distribution. No humans on the Tech &amp; Check team reviewed or verified the accuracy of these statements or their attribution before this alert was sent.</p>
+<p>This daily email is part of an experimental, automated alert service developed by the Duke Reporters’ Lab as part of our Tech &amp; Check Cooperative. The alerts are computer-generated tip sheets designed to help journalists identify statements from the last 24 hours that are newsworthy enough to fact-check. The alerts are for use in your newsrooms and not intended for broader public distribution. No humans on the Tech &amp; Check team reviewed or verified the accuracy of these statements or their attribution before this alert was sent.</p>
 
 <p>The statements above from CNN are based on the network's "rush" transcripts. Please verify quotes and speakers by checking the original video. Statements from Twitter were gathered from a selected list of official Twitter accounts, including the feeds of candidates, elected officials and state and national party organizations.</p>
 
@@ -9,4 +9,4 @@
 <p>Please send any feedback to Tech &amp; Check project manager Erica Ryan (<a href="mailto:elryan@gmail.com">elryan@gmail.com</a>).</p>
 
 <p>Best,<br>
-<b>Duke Reporters' Lab</b></p>
+<b>Duke Reporters’ Lab</b></p>
