Repair newsletter display of claim speaker
In #268 and #294, we updated the Claim model to split `speakerName`
into two fields, (`speakerExtractedName` and `speakerNormalizedName`,
with the latter intended for display) but didn’t flow this change down
to the newsletter.

This change correctly displays the normalized name in the newsletter.

Resolves #297

Signed-off-by: Justin Reese <justin@justinreese.com>

--- a/src/server/newsletters/templates/national.hbs
+++ b/src/server/newsletters/templates/national.hbs
@@ -10,7 +10,7 @@
         <div class="claim__metadata">
           <a href="{{canonicalUrl}}" class="claim__permalink">
             <cite class="claim__speaker">
-              {{speakerName}}
+              {{speakerNormalizedName}}
             </cite>
             {{#if source}}<span class="claim__source">on {{ source }}</span>{{/if}}
             <span class="claim__platform">({{convertScraperNameToPlatformName scraperName}})</span></a>:
@@ -33,7 +33,7 @@
         <div class="claim__metadata">
           <a href="{{canonicalUrl}}" class="claim__permalink">
             <cite class="claim__speaker">
-              {{speakerName}}
+              {{speakerNormalizedName}}
             </cite>
             <span class="claim__platform">({{convertScraperNameToPlatformName scraperName}})</span></a>:
         </div>
