--- a/src/server/newsletters/templates/northCarolina.hbs
+++ b/src/server/newsletters/templates/northCarolina.hbs
@@ -10,7 +10,7 @@
         <div class="claim__metadata">
           <a href="{{canonicalUrl}}" class="claim__permalink">
             <cite class="claim__speaker">
-              {{speakerName}}
+              {{speakerNormalizedName}}
             </cite>
             <span class="claim__platform">({{convertScraperNameToPlatformName scraperName}})</span></a>:
         </div>
