--- a/src/server/newsletters/templates/northCarolinaText.hbs
+++ b/src/server/newsletters/templates/northCarolinaText.hbs
@@ -5,7 +5,7 @@
 🎭 SOCIAL MEDIA CLAIMS 🎭
 {{#each claims.SOCIAL}}
 
-{{speakerName}} ({{convertScraperNameToPlatformName scraperName}}):
+{{speakerNormalizedName}} ({{convertScraperNameToPlatformName scraperName}}):
 {{ content }}
 — {{canonicalUrl}}
 {{else}}
