Add Meet the Press to newsletter
We decided that for now we would just include Meet the Press content in
the TV section of the newsletter mixed in with CNN, rather than create
an entirely new subsection toolset.

Issue #380

--- a/src/server/templates/partials/head.hbs
+++ b/src/server/templates/partials/head.hbs
@@ -77,6 +77,9 @@
     .claim[data-platform="MSNBC"] .claim__platform {
       color: #3062ff;
     }
+    .claim[data-platform="NBC"] .claim__platform {
+      color: #001D5F;
+    }
     .claim[data-platform="Twitter"] .claim__platform {
       color: #1da1f2;
     }
@@ -102,6 +105,9 @@
     }
     .claim[data-platform="Twitter"] .claim__content {
       border-color: #1da1f2;
+    }
+    .claim[data-platform="NBC"] .claim__content {
+      border-color: #001D5F;
     }
     .claim[data-platform="Facebook"] .claim__content {
       border-color: #3b5998;
